@@ -37,7 +37,7 @@ class PDF::Content::Text::Line {
         $!indent = - $.content-width  /  2;
     }
 
-    method content(Numeric :$font-size!, Numeric :$x-shift = 0, Str :$space!) {
+    method content(Numeric :$font-size!, Numeric :$x-shift = 0, :$space!) {
         my Numeric \scale = -1000 / $font-size;
         my subset Str-or-Pos where Str|Numeric;
         my Str-or-Pos @line;
